##
## All targets have been declared "noinst" for inclusion with gnubg.  As
## a standalone library, it would be better for them to be installed.
##

INCLUDES = -I$(srcdir)/../lib
LIBS = -L../lib -levent

noinst_LIBRARIES = libext.a
libext_a_SOURCES = ext.c extwin.c tick.xbm
noinst_HEADERS = ext.h extwin.h
