metfiles = catalog.xml catalog.dtd met.dtd met.xsl README TODO \
	dunstan.xml g11.xml jac050.xml jac100.xml jacobs.xml Kazaross-Shaw.xml \
	mec.xml  mec26.xml ortega.xml Rockwell-Kazaross.xml snowie.xml \
	woolsey.xml zadeh.xml
metdir = $(pkgdatadir)/met
met_DATA = $(metfiles)
EXTRA_DIST = $(metfiles)

