gnubgiconsdir = $(datadir)
gnubgpixmapsdir = $(pkgdatadir)/pixmaps

ICONS_16_SCALABLE = icons/hicolor/16x16/apps/scalable/gnubg.svg
ICONS_16 = icons/hicolor/16x16/apps/gnubg.png
ICONS_22_SCALABLE = icons/hicolor/22x22/apps/scalable/gnubg.svg
ICONS_22 = icons/hicolor/22x22/apps/gnubg.png
ICONS_24_SCALABLE = icons/hicolor/24x24/apps/scalable/gnubg.svg
ICONS_24 = icons/hicolor/24x24/apps/gnubg.png
ICONS_32_SCALABLE = icons/hicolor/32x32/apps/scalable/gnubg.svg
ICONS_32 = icons/hicolor/32x32/apps/gnubg.png
ICONS_48_SCALABLE = icons/hicolor/48x48/apps/scalable/gnubg.svg
ICONS_48 = icons/hicolor/48x48/apps/gnubg.png

PIXMAPS = gnubg-big.png

EXTRA_DIST = \
	     gnubg.ico \
	     $(ICONS_16_SCALABLE) \
	     $(ICONS_22_SCALABLE) \
	     $(ICONS_24_SCALABLE) \
	     $(ICONS_32_SCALABLE) \
	     $(ICONS_48_SCALABLE)

nobase_dist_gnubgicons_DATA = \
			      $(ICONS_16) \
			      $(ICONS_22) \
			      $(ICONS_24) \
			      $(ICONS_32) \
			      $(ICONS_48)

gnubgpixmaps_DATA = $(PIXMAPS)
